# agent-first-slug

./: Cargo.toml  README.md  build.rs  spore.core.json
.github/workflows/: ci.yml  release.yml
docs/: cli.md
skills/agent-first-slug/: SKILL.md
skills/agent-first-slug/agents/: openai.yaml
src/: lib.rs
tests/: cli.rs
